[add] controller mappings

--- a/lcdp-framework-db/pom.xml
+++ b/lcdp-framework-db/pom.xml
@@ -27,6 +27,11 @@
             <version>3.0.2</version>
         </dependency>
         <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-envers</artifactId>
+            <version>6.5.2.Final</version>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
