--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
     <modules>
         <module>lcdp-framework-db</module>
         <module>lcdp-framework-service</module>
+        <module>lcdp-framework-security</module>
         <module>lcdp-framework-web</module>
         <module>lcdp-framework-entrance</module>
         <module>lcdp-framework-starter</module>
@@ -48,6 +49,11 @@
             <dependency>
                 <groupId>org.lcdpframework</groupId>
                 <artifactId>lcdp-framework-service</artifactId>
+                <version>${revision}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.lcdpframework</groupId>
+                <artifactId>lcdp-framework-security</artifactId>
                 <version>${revision}</version>
             </dependency>
             <dependency>
