--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <maven.compiler.target>21</maven.compiler.target>
         <lombok.version>1.18.32</lombok.version>
         <mapstruct.version>1.4.2.Final</mapstruct.version>
+        <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
     </properties>
 
     <modules>
@@ -27,6 +28,7 @@
         <module>lcdp-framework-web</module>
         <module>lcdp-framework-entrance</module>
         <module>lcdp-framework-starter</module>
+        <module>lcdp-framework-sql</module>
     </modules>
 
     <dependencyManagement>
@@ -69,6 +71,11 @@
             <dependency>
                 <groupId>org.lcdpframework</groupId>
                 <artifactId>lcdp-framework-entrance</artifactId>
+                <version>${revision}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.lcdpframework</groupId>
+                <artifactId>lcdp-framework-sql</artifactId>
                 <version>${revision}</version>
             </dependency>
             <dependency>
