--- a/lcdp-framework-service/pom.xml
+++ b/lcdp-framework-service/pom.xml
@@ -17,6 +17,10 @@
             <artifactId>lcdp-framework-db</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.lcdpframework</groupId>
+            <artifactId>lcdp-framework-sql</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
         </dependency>
